--- a/src/pages/Item_history.css
+++ b/src/pages/Item_history.css
@@ -12,6 +12,19 @@
     width: 100%;
     height: 100%;
   }
+
+  .print-button {
+    background-color: #0f1d9f;
+    color: white;
+    border: none;
+    width: 180px;
+    padding: 0.5em 1em;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+}
  
   .sidebar {
     width: 250px;
@@ -38,12 +51,13 @@
  
   .header-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     margin-left: 20px;
     padding: 10px;
     width: 100%;
     margin-top: 50px;
     color: #0F1D9F;
+    justify-content: space-between;
   }
  
   .main-header h1 {
